# job-board

.github/workflows/: run-test.yml  workflow-dispatch-action.yml
backend/: .flaskenv  Dockerfile  blueprints.py  docker-compose.yml  prod-server.sh  pyproject.toml
backend/app/: __init__.py  config.py
backend/app/models/: __init__.py  jobs.py
backend/app/views/: jobs.py
backend/migrations/versions/: 3abf6ffa731a_.py
backend/tests/: test_job_board.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: AddResources.vue  ResourceView.vue  StoredResources.vue
frontend/src/layouts/: Header.vue
frontend/src/stores/: contact.store.ts
